--- a/LeetCode_Daily/_February/28th.md
+++ b/LeetCode_Daily/_February/28th.md
@@ -2,7 +2,7 @@
 
 mplement FreqStack, a class which simulates the operation of a stack-like data structure.
 
-### FreqStack has two functions:
+### FreqStack has two functions
 
 * push(int x), which pushes an integer x onto the stack.
 * pop(), which removes and returns the most frequent element in the stack.
@@ -32,7 +32,7 @@ pop() -> returns 4.
 The stack becomes [5,7].
 ~~~
 
-## Note
+### Note
 
 ~~~Calls to FreqStack.push(int x) will be such that 0 <= x <= 10^9.
 It is guaranteed that FreqStack.pop() won't be called if the stack has zero elements.
