--- a/LeetCode_Daily/_March/16th.md
+++ b/LeetCode_Daily/_March/16th.md
@@ -24,27 +24,21 @@ The total profit is ((8 - 1) - 2) + ((9 - 4) - 2) = 8.
 Output: 6
 ~~~
 
+## Constraints:
 
+* 1 < prices.length <= 5 * 104
+* 0 < prices[i], fee < 5 * 104
 
 ## Java
 
-~~~public class Codec {
-
-    Map<String, String> urlMap;
-
-    public Codec() {
-        urlMap = new HashMap<>();
+~~~class Solution {
+    public int maxProfit(int[] prices, int fee) {
+        int cash = 0, hold = -prices[0];
+        for (int i = 1; i < prices.length; i++) {
+            cash = Math.max(cash, hold + prices[i] - fee);
+            hold = Math.max(hold, cash - prices[i]);
+        }
+        return cash;
     }
-
-    public String encode(String originalUrl) {
-
-        String newUrl = Long.toString(originalUrl.hashCode(), 16);
-        urlMap.put(newUrl, originalUrl);        
-        return newUrl;
-    }   
-
-    public String decode(String newUrl) {
-        return urlMap.get(newUrl);  
-    }   
 }
 ~~~
